test/e2e/fixtures/mapping-same-name-different-namespaces/manifests.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mapping-same-name-different-namespaces-other
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapping-same-name-different-namespaces
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mapping-same-name-different-namespaces
  template:
    metadata:
      labels:
        app: mapping-same-name-different-namespaces
    spec:
      containers:
        - name: kat-server
          image: (env('KAT_SERVER_IMAGE'))
          imagePullPolicy: IfNotPresent
          command: ["/work/kat-server"]
          env:
            - name: BACKEND
              value: mapping-same-name-different-namespaces
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mapping-same-name-different-namespaces
spec:
  selector:
    app: mapping-same-name-different-namespaces
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: getambassador.io/v3alpha1
kind: Mapping
metadata:
  name: mapping-same-name-different-namespaces
spec:
  ambassador_id: [(env('SLOT'))]
  hostname: "*"
  prefix: /mapping-same-name-different-namespaces-1/
  service: http://mapping-same-name-different-namespaces:8080
---
apiVersion: getambassador.io/v3alpha1
kind: Mapping
metadata:
  name: mapping-same-name-different-namespaces
  namespace: mapping-same-name-different-namespaces-other
spec:
  ambassador_id: [(env('SLOT'))]
  hostname: "*"
  prefix: /mapping-same-name-different-namespaces-2/
  service: (join('', ['http://mapping-same-name-different-namespaces.', $namespace, ':8080']))
