test/e2e/fixtures/mapping-same-name-different-namespaces/queries.json
[
  {
    "url": "/mapping-same-name-different-namespaces-1/",
    "method": "GET"
  },
  {
    "url": "/mapping-same-name-different-namespaces-2/",
    "method": "GET"
  }
]
